--- a/content_ST1.html
+++ b/content_ST1.html
@@ -39,7 +39,7 @@
 <body>
     <!-- Navbar -->
     <header class="navbar">
-        <label class="logo">Quality Education</label>
+        <div class="logo"><a href="home.html">Quality Education</a></div>
         <nav>
             <ul>
                 <li><a href="splash.html">Splash</a></li>
@@ -62,7 +62,7 @@
             <p>Education isn't just about memorizing facts or acing standardized tests. It's about giving people the tools to rewrite their futures. Think about it—when a person gets a real shot at learning, it doesn't just transform their life. It ripples outward, impacting families, communities, and even entire economies. Education is the great equalizer, offering everyone—regardless of background—the opportunity to change the trajectory of their lives.</p>
     
             <div class="image-container">
-                <img src="content1_img2.jpeg" alt="Image 1">
+                <img src="images/content1_img2.jpeg" alt="Image 1">
             </div>
     
             <h2>Barriers to Education</h2>
@@ -75,7 +75,7 @@
             <p>But there's more to it than just better classrooms or newer textbooks. True quality education ensures that every child, regardless of where they live or what their background is, has an equal chance to succeed. Imagine a girl in rural Kenya, working hard with a tablet, learning coding skills that will open doors to an entirely new world of opportunities. Now imagine a teenager in Tokyo, also mastering the latest technologies. In an ideal world, both of them should have the same access to these skills—because in the end, the potential of a person isn't limited by where they're from or how much money they have. Their potential is shaped by what they're given the chance to learn.</p>
    
             <div class="image-container">
-                <img src="content1_img1.jpeg" alt="Image 2">
+                <img src="images/content1_img1.jpeg" alt="Image 2">
             </div>
 
             <h2>The Path Forward</h2>
