--- a/content_ST2.html
+++ b/content_ST2.html
@@ -49,7 +49,7 @@
 <body>
     <!-- Navbar -->
     <header class="navbar">
-        <label class="logo">Quality Education</label>
+        <div class="logo"><a href="home.html">Quality Education</a></div>
         <nav>
             <ul>
                 <li><a href="splash.html">Splash</a></li>
@@ -87,7 +87,7 @@
             </ul>
 
             <div class="image-container">
-                <img src="content2_img1.webp" alt="Image 2">
+                <img src="images/content2_img1.webp" alt="Image 2">
             </div>
         </div>
 
@@ -108,7 +108,7 @@
             </ul>
 
             <div class="image-container">
-                <img src="content2_img2.webp" alt="Image 2">
+                <img src="images/content2_img2.webp" alt="Image 2">
             </div>
         
             <h2>How Can We Improve Quality Education?</h2>
