--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navbar -->
     <header class="navbar">
-        <div class="logo">Quality Education</div>
+        <div class="logo"><a href="home.html">Quality Education</a></div>
         <nav>
             <ul>
                 <li><a href="splash.html">Splash</a></li>
@@ -29,19 +29,19 @@
         <h1 style="margin: 20px 40px;">Meet a Experienced Volunteer</h1>
         <div class="profile-container">
             <div class="profile-card">
-                    <img src="member1.webp" alt="profile image" class="profile-image">
-                    <h2>Abc adf</h2>
+                    <img src="images/kaushal_khatri.jpg" alt="profile image" class="profile-image">
+                    <h2>Kaushal Khatri</h2>
                     <ul class="info-list">
                         <li><b>Age:</b> 20</li>
                         <li><b>Work:</b> Student</li>
                         <li><b>Family:</b> Single</li>
-                        <li><b>Location:</b> London</li>
+                        <li><b>Location:</b> Nepal</li>
                     </ul>
             </div>
             <div class="profile-sections">
                 <section class="bio">
                     <h3>Short Bio</h3>
-                    <p>abc is a third-year Computer Science student passionate about web development and user experience design...</p>
+                    <p>Kaushal is a second-year Computer Science student passionate about web development and user experience design...</p>
                 </section>
                 
                 <section class="skills">
