--- a/sitemap.html
+++ b/sitemap.html
@@ -40,7 +40,7 @@
 <body>
     <!-- Navbar -->
     <header class="navbar">
-        <div class="logo">Quality Education</div>
+        <div class="logo"><a href="home.html">Quality Education</a></div>
         <nav>
             <ul>
                 <li><a href="splash.html">Splash</a></li>
