--- a/team.html
+++ b/team.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navbar -->
     <header class="navbar">
-        <div class="logo">Quality Education</div>
+        <div class="logo"><a href="home.html">Quality Education</a></div>
         <nav>
             <ul>
                 <li><a href="splash.html">Splash</a></li>
@@ -38,7 +38,7 @@
     
     <div class="team-container">
         <div class="member" id="ankit">
-            <img src="member1.webp" alt="Ankit Paudel">
+            <img src="images/ankit_paudel.jpg" alt="Ankit Paudel">
             <h3>Ankit Paudel</h3>
             <a href="#ankit" class="detail-button">Details</a>
             <div class="details">
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="member" id="aryan">
-            <img src="member1.webp" alt="Aryan Shrestha">
+            <img src="images/aryan_shrestha.jpg" alt="Aryan Shrestha">
             <h3>Aryan Shrestha</h3>
             <a href="#aryan" class="detail-button">Details</a>
             <div class="details">
@@ -61,14 +61,14 @@
                 <p><b>Implemented Pages</b></p>
                 <ul>
                     <li><a href="home.html">Home Page</a></li>
-                    <li><a href="table.html">Tabel Page</a></li>
+                    <li><a href="table.html">Table Page</a></li>
                     <li><a href="content_ST2.html">Content 2 Page</a></li>
                     <li><a href="pageEditor_ST2.html">Editors Page</a></li>
                 </ul>
             </div>
         </div>
         <div class="member" id="bijay">
-            <img src="member1.webp" alt="Bijay Bikram Dahal">
+            <img src="images/bijay_dahal.jpg" alt="Bijay Bikram Dahal">
             <h3>Bijay Bikram Dahal</h3>
             <a href="#bijay" class="detail-button">Details</a>
             <div class="details">
@@ -83,7 +83,7 @@
             </div>
         </div>
         <div class="member" id="kaushal">
-            <img src="member1.webp" alt="Kaushal Khatri">
+            <img src="images/kaushal_khatri.jpg" alt="Kaushal Khatri">
             <h3>Kaushal Khatri</h3>
             <a href="#kaushal" class="detail-button">Details</a>
             <div class="details">
