--- a/volunteer.html
+++ b/volunteer.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navbar -->
     <header class="navbar">
-        <div class="logo">Quality Education</div>
+        <div class="logo"><a href="home.html">Quality Education</a></div>
         <nav>
             <ul>
                 <li><a href="splash.html">Splash</a></li>
@@ -39,7 +39,7 @@
     <!-- Volunteer Programs Section -->
     <section class="volunteer-programs">
         <div class="program-card">
-            <img src="volunteer1_thumbnail.jpg" alt="image">
+            <img src="images/volunteer1_thumbnail.jpg" alt="image">
             <h3>Shifting power, unlocking potential: A journey to centre girls in economic opportunity</h3>
             <p class="program-info">
                 <b>Date:</b> March 8, 2025
@@ -49,7 +49,7 @@
         </div>
 
         <div class="program-card">
-            <img src="volunteer2_thumbnail.jpg" alt="image">
+            <img src="images/volunteer2_thumbnail.jpg" alt="image">
             <h3>Teach For Niger rejoint le réseau Teach For All</h3>
             <p class="program-info">
                 <b>Date: </b> February 3, 2025
@@ -59,7 +59,7 @@
         </div>
 
         <div class="program-card">
-            <img src="volunteer3_thumbnail.jpg" alt="image">
+            <img src="images/volunteer3_thumbnail.jpg" alt="image">
             <h3>Too young to be a mother</h3>
             <p class="program-info">
                 <b>Date:</b> March 17, 2025
@@ -69,7 +69,7 @@
         </div>
 
         <div class="program-card">
-            <img src="volunteer4_thumbnail.jpg" alt="image">
+            <img src="images/volunteer4_thumbnail.jpg" alt="image">
             <h3>In your own language: Ensuring migrant and displaced children can succeed within Poland's education system</h3>
             <p class="program-info">
                 <b>Date:</b> December 18, 2024
