--- a/pageEditor_ST3.html
+++ b/pageEditor_ST3.html
@@ -3,48 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Volunteer - Clean Water and Sanitation</title>
+    <title>Editor's Page 3</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div class="logo_text">
-            <img src="logo.png" alt="logo">
-            <h1>Clean Water and Sanitation</h1>
-        </div>
+    <!-- Navbar -->
+    <header class="navbar">
+        <div class="logo"><a href="home.html">Quality Education</a></div>
         <nav>
-            <table>
-                <tr>
-                    <th><a href="home.html">Home</a></th>
-                    <th><a href="volunteer.html">Volunteer</a></th>
-                    <th><a href="table.html">Table</a></th>
-                    <th><a href="profile.html">User Profile</a></th>
-                    <th><a href="feedback.html">Feedback</a></th>
-                    <th><a href="sitemap.html">Sitemap</a></th>
-                    <th><a href="team.html">Team</a></th>
-                </tr>
-            </table>
+            <ul>
+                <li><a href="splash.html">Splash</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="volunteer.html">Volunteer</a></li>
+                <li><a href="table.html">Table</a></li>
+                <li><a href="profile.html">User Profile</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
+                <li><a href="sitemap.html">Sitemap</a></li>
+                <li><a href="team.html">Team</a></li>
+            </ul>
         </nav>
     </header>
+
     <main>
-        <section id="volunteer">
-            <h2>Page Editor- ST3</h2>
-            <p>
-                Our mission is to ensure clean and accessible water for all. We focus on improving water quality, reducing pollution, and providing sustainable solutions for water management.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec libero et velit suscipit fermentum vel ac nulla. Fusce varius risus at orci aliquet, sed venenatis justo condimentum. Integer facilisis elit nec lorem pharetra, ut dignissim lacus bibendum.
-            </p>
-            <p>
-                Curabitur sagittis metus in felis aliquet malesuada. Praesent elementum, sapien eget ultricies bibendum, sapien erat fermentum odio, a tincidunt arcu libero nec justo. Nulla facilisi.
-            </p>
-            <p>
-                We believe in collaboration, innovation, and sustainable practices to tackle the challenges of water scarcity and sanitation. Join us in making a difference.
-            </p>
-        </section>
+        
     </main>
+
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Your Organization. All rights reserved.</p>
+        <div class="footer-container">
+            <div class="editor-block">
+                <p class="head">Editor Profile</p>
+                <p>This is the Editor's Page of Student 3.</p>
+                <p>Click the link below to go to the validation page of student 3</p>
+                <a href="validation_ST3.html">Editor's Page</a>
+            </div>
+
+            <div class="footer-nav">
+                <p class="head">Navigation</p>
+                <ul>
+                    <li><a href="splash.html">Splash Page</a></li>
+                    <li><a href="home.html">Home Page</a></li>
+                    <li><a href="volunteer.html">Volunteer Page</a></li>
+                    <li><a href="table.html">Table Page</a></li>
+                    <li><a href="profile.html">User Profile Page</a></li>
+                    <li><a href="feedback.html">Feedback Page</a></li>
+                    <li><a href="sitemap.html">Sitemap Page</a></li>
+                    <li><a href="team.html">Team Page</a></li>
+                </ul>
+            </div>
+            <div class="team">
+                <p class="head">Team Members</p>
+                <ul>
+                    <li><a href="pageEditor_ST1.html">Ankit Paudel</a></li>
+                    <li><a href="pageEditor_ST2.html">Aryan Shrestha</a></li>
+                    <li><a href="pageEditor_ST3.html">Bijay Bikram Dahal</a></li>
+                    <li><a href="pageEditor_ST4.html">Kaushal Khatri</a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
+
 </body>
 </html>
