--- a/splash.html
+++ b/splash.html
@@ -11,7 +11,7 @@
             text-align: center;
         }
         body{
-            background: url(splash-bg.jpeg) no-repeat center center/cover;
+            background: url(images/splash-bg.jpeg) no-repeat center center/cover;
             height: 100vh;
         }
         .splash-screen {
