--- a/index.html
+++ b/index.html
@@ -4,54 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Splash Screen</title>
-    <style>
-        *{
-            margin:0;
-            padding: 0;
-            text-align: center;
-        }
-        body{
-            background: url(images/splash-bg.jpeg) no-repeat center center/cover;
-            height: 100vh;
-        }
-        .splash-screen {
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding:50px;
-            margin: 200px 300px;
-        }
+    <link rel="icon" type="image/png" href="image/logoicon.png">
 
-        .splash-screen h1 {
-            font-size: 50px;
-        }
+    <link rel="stylesheet" href="css/splash.css">
 
-        .splash-screen p {
-            font-size: 20px;
-            padding: 10px;
-        }
-
-        li{
-            list-style: none;
-            font-size: 20px;
-            padding: 5px;
-        }
-
-        .loading-bar {
-            width: 100%;
-            background-color: #444;
-            border-radius: 5px;
-            margin-top: 20px;
-            height: 10px;
-        }
-        
-        .progress {
-            width: 0%;
-            height: 100%;
-            background-color: #4CAF50;
-            border-radius: 5px;
-            transition: 4s linear;
-        }
-    </style>
 </head>
 <body>
     <script>
