--- a/volunteer.html
+++ b/volunteer.html
@@ -1,163 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Volunteer - Quality Education</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="volunteer.css">
-</head>
-<body>
+    <link rel="icon" type="image/png" href="image/logoicon.png">
+
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/volunteer.css">
+  </head>
+  <body>
     <!-- Navbar -->
-    <header class="navbar">
-        <div class="logo"><a href="home.html">Quality Education</a></div>
-        <nav>
-            <ul>
-                <li><a href="splash.html">Splash</a></li>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="volunteer.html" class="active">Volunteer</a></li>
-                <li><a href="table.html">Table</a></li>
-                <li><a href="profile.html">User Profile</a></li>
-                <li><a href="feedback.html">Feedback</a></li>
-                <li><a href="sitemap.html">Sitemap</a></li>
-                <li><a href="team.html">Team</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav class="navbar">
+        <b href="index.html" class="active">
+            <img src="image/logoicon.png" alt="QE Logo" class="icon">
+            <h2>Quality Education</h2>
+        </b> 
+              <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+      <div class="nav-links">
+        <a href="index.html">Splash</a>
+        <a href="home.html">Home</a>
+        <a href="volunteer.html" class="active">Volunteer</a>
+        <a href="table.html">Table</a>
+        <a href="profile.html">User Profile</a>
+        <a href="feedback.html">Feedback</a>
+        <a href="sitemap.html">Sitemap</a>
+        <a href="team.html">Team</a>
+      </div>
+    </nav>
 
     <main>
-        <!-- Header Section -->
-    <section class="title">
+      <!-- Header Section -->
+      <section class="title">
         <h1>Check the volunteer works done</h1>
         <select class="sort-dropdown">
-            <option value="popular">MOST POPULAR</option>
-            <option value="newest">NEWEST</option>
-            <option value="latest">LATEST</option>
+          <option value="popular">MOST POPULAR</option>
+          <option value="newest">NEWEST</option>
+          <option value="latest">LATEST</option>
         </select>
-    </section>
+      </section>
 
-    <!-- Volunteer Programs Section -->
-    <section class="volunteer-programs">
+      <!-- Volunteer Programs Section -->
+      <section class="volunteer-programs">
         <div class="program-card">
-            <img src="images/volunteer1_thumbnail.jpg" alt="image">
-            <h3>Shifting power, unlocking potential: A journey to centre girls in economic opportunity</h3>
-            <p class="program-info">
-                <b>Date:</b> March 8, 2025
-            </p>
-            <p>Volunteer in empowering girls by providing them knowledge, trainings and opportunity.</p>
-            <button class="view-btn">VIEW PROJECT</button>
+          <img src="image/volunteer1_thumbnail.jpg" alt="image" />
+          <h3>
+            Shifting power, unlocking potential: A journey to centre girls in
+            economic opportunity
+          </h3>
+          <p class="program-info"><b>Date:</b> March 8, 2025</p>
+          <p>
+            Volunteer in empowering girls by providing them knowledge, trainings
+            and opportunity.
+          </p>
+          <button class="view-btn">VIEW PROJECT</button>
         </div>
 
         <div class="program-card">
-            <img src="images/volunteer2_thumbnail.jpg" alt="image">
-            <h3>Teach For Niger rejoint le réseau Teach For All</h3>
-            <p class="program-info">
-                <b>Date: </b> February 3, 2025
-            </p>
-            <p>Help for the poor and needy students in Africa for quality education.</p>
-            <button class="view-btn">VIEW PROJECT</button>
+          <img src="image/volunteer2_thumbnail.jpg" alt="image" />
+          <h3>Teach For Niger rejoint le réseau Teach For All</h3>
+          <p class="program-info"><b>Date: </b> February 3, 2025</p>
+          <p>
+            Help for the poor and needy students in Africa for quality
+            education.
+          </p>
+          <button class="view-btn">VIEW PROJECT</button>
         </div>
 
         <div class="program-card">
-            <img src="images/volunteer3_thumbnail.jpg" alt="image">
-            <h3>Too young to be a mother</h3>
-            <p class="program-info">
-                <b>Date:</b> March 17, 2025
-            </p>
-            <p>Investing in the education of girls living as refugees is not just an act of support. It is an investment in the future of entire communities.</p>
-            <button class="view-btn">VIEW PROJECT</button>
+          <img src="image/volunteer3_thumbnail.jpg" alt="image" />
+          <h3>Too young to be a mother</h3>
+          <p class="program-info"><b>Date:</b> March 17, 2025</p>
+          <p>
+            Investing in the education of girls living as refugees is not just
+            an act of support. It is an investment in the future of entire
+            communities.
+          </p>
+          <button class="view-btn">VIEW PROJECT</button>
         </div>
 
         <div class="program-card">
-            <img src="images/volunteer4_thumbnail.jpg" alt="image">
-            <h3>In your own language: Ensuring migrant and displaced children can succeed within Poland's education system</h3>
-            <p class="program-info">
-                <b>Date:</b> December 18, 2024
-            </p>
-            <p>Poland's efforts and challenges in integrating migrant and displaced children.</p>
-            <button class="view-btn">VIEW PROJECT</button>
+          <img src="image/volunteer4_thumbnail.jpg" alt="image" />
+          <h3>
+            In your own language: Ensuring migrant and displaced children can
+            succeed within Poland's education system
+          </h3>
+          <p class="program-info"><b>Date:</b> December 18, 2024</p>
+          <p>
+            Poland's efforts and challenges in integrating migrant and displaced
+            children.
+          </p>
+          <button class="view-btn">VIEW PROJECT</button>
         </div>
-    </section>
+      </section>
 
-    <div style="text-align: center;">
+      <div style="text-align: center">
         <button class="see-more-btn">See More</button>
-    </div>
+      </div>
 
-    <hr style="margin-top: 30px;">
+      <hr style="margin-top: 30px" />
 
-    <!-- Ratings & Reviews Section -->
-    <h1 style="text-align: center; padding-top:20px; color:#c42d2d;">Ratings and Reviews</h1>
-    <section class="reviews">
+      <!-- Ratings & Reviews Section -->
+      <h1 style="text-align: center; padding-top: 20px; color: #c42d2d">
+        Ratings and Reviews
+      </h1>
+      <section class="reviews">
         <div class="rating-summary">
-            <h2 style="font-size: 50px; color: rgba(0, 122, 0, 0.783);">4.6/5</h2>
-            <p style="padding-bottom: 10px;"><b>Excellent</b></p>
-            <p style="padding-bottom: 10px;">53 reviews</p>
-            <button class="reviews-btn">See all reviews</button>
-        </div>
-        
-        <div class="review-card">
-            <h4>5/5 Excellent</h4>
-            <p>The programs were very interesting...</p>
-            <a href="#" class="see-more">See more</a>
-            <p class="reviewer">- Anish P., March 2, 2025</p>
+          <h2 style="font-size: 50px; color: rgba(0, 122, 0, 0.783)">4.6/5</h2>
+          <p style="padding-bottom: 10px"><b>Excellent</b></p>
+          <p style="padding-bottom: 10px">53 reviews</p>
+          <button class="reviews-btn">See all reviews</button>
         </div>
 
         <div class="review-card">
-            <h4>4/5 Very Good</h4>
-            <p>The programs were very interesting...</p>
-            <a href="#" class="see-more">See more</a>
-            <p class="reviewer">- David K., March 5, 2025</p>
+          <h4>5/5 Excellent</h4>
+          <p>The programs were very interesting...</p>
+          <a href="#" class="see-more">See more</a>
+          <p class="reviewer">- Anish P., March 2, 2025</p>
         </div>
-    </section>
 
-    <!-- Feedback Form -->
-    <section class="feedback-form">
-        <h3 style="padding-bottom: 5px;">Give your rating</h3>
-        <input type="radio" name="rating"><label>1</label>
-        <input type="radio" name="rating"><label>2</label>
-        <input type="radio" name="rating"><label>3</label>
-        <input type="radio" name="rating"><label>4</label>
-        <input type="radio" name="rating" checked><label>5</label>
-        <h3 style="padding-top: 5px;">Send us your review</h3>
-        <form><textarea placeholder="Got suggestions? We'd love to hear them!"></textarea>
-            <button class="submit-btn">Submit Feedback</button>
-            <button class="cancel-btn" type="reset">Cancel</button>
+        <div class="review-card">
+          <h4>4/5 Very Good</h4>
+          <p>The programs were very interesting...</p>
+          <a href="#" class="see-more">See more</a>
+          <p class="reviewer">- David K., March 5, 2025</p>
+        </div>
+      </section>
+
+      <!-- Feedback Form -->
+      <section class="feedback-form">
+        <h3 style="padding-bottom: 5px">Give your rating</h3>
+        <input type="radio" name="rating" /><label>1</label>
+        <input type="radio" name="rating" /><label>2</label>
+        <input type="radio" name="rating" /><label>3</label>
+        <input type="radio" name="rating" /><label>4</label>
+        <input type="radio" name="rating" checked /><label>5</label>
+        <h3 style="padding-top: 5px">Send us your review</h3>
+        <form>
+          <textarea
+            placeholder="Got suggestions? We'd love to hear them!"
+          ></textarea>
+          <button class="submit-btn">Submit Feedback</button>
+          <button class="cancel-btn" type="reset">Cancel</button>
         </form>
-    </section>
+      </section>
     </main>
 
     <footer>
-        <div class="footer-container">
-            <div class="editor-block">
-                <p class="head">Editor Profile</p>
-                <p>This volunteer page was designed by student 1.</p>
-                <p>For further information, click the link below to go to the editor's page of student 1</p>
-                <a href="pageEditor_ST1.html">Editor's Page</a>
-            </div>
-
-            <div class="footer-nav">
-                <p class="head">Navigation</p>
-                <ul>
-                    <li><a href="splash.html">Splash Page</a></li>
-                    <li><a href="home.html">Home Page</a></li>
-                    <li><a href="volunteer.html">Volunteer Page</a></li>
-                    <li><a href="table.html">Table Page</a></li>
-                    <li><a href="profile.html">User Profile Page</a></li>
-                    <li><a href="feedback.html">Feedback Page</a></li>
-                    <li><a href="sitemap.html">Sitemap Page</a></li>
-                    <li><a href="team.html">Team Page</a></li>
-                </ul>
-            </div>
-            <div class="team">
-                <p class="head">Team Members</p>
-                <ul>
-                    <li><a href="pageEditor_ST1.html">Ankit Paudel</a></li>
-                    <li><a href="pageEditor_ST2.html">Aryan Shrestha</a></li>
-                    <li><a href="pageEditor_ST3.html">Bijay Bikram Dahal</a></li>
-                    <li><a href="pageEditor_ST4.html">Kaushal Khatri</a></li>
-                </ul>
-            </div>
+      <div class="footer-container">
+        <div class="editor-block">
+          <p class="head">Editor Profile</p>
+          <p>This volunteer page was designed by student 1.</p>
+          <p>
+            For further information, click the link below to go to the editor's
+            page of student 1
+          </p>
+          <a class="editor-block-link" href="pageEditor_ST1.html"
+            >Editor's Page</a
+          >
         </div>
+
+        <div class="footer-nav">
+          <p class="head">Navigation</p>
+          <ul>
+            <li><a href="index.html">Splash Page</a></li>
+            <li><a href="home.html">Home Page</a></li>
+            <li><a href="volunteer.html">Volunteer Page</a></li>
+            <li><a href="table.html">Table Page</a></li>
+            <li><a href="profile.html">User Profile Page</a></li>
+            <li><a href="feedback.html">Feedback Page</a></li>
+            <li><a href="sitemap.html">Sitemap Page</a></li>
+            <li><a href="team.html">Team Page</a></li>
+          </ul>
+        </div>
+        <div class="team">
+          <p class="head">Team Members</p>
+          <ul>
+            <li><a href="pageEditor_ST1.html">Ankit Paudel</a></li>
+            <li><a href="pageEditor_ST2.html">Aryan Shrestha</a></li>
+            <li><a href="pageEditor_ST3.html">Bijay Bikram Dahal</a></li>
+            <li><a href="pageEditor_ST4.html">Kaushal Khatri</a></li>
+          </ul>
+        </div>
+      </div>
+      <p style="color: tan">
+        Quality Education.&copy; <span id="year"></span> All rights reserved.
+      </p>
     </footer>
-</body>
+
+    <!-- JavaScript for Mobile Menu -->
+    <script>
+      function toggleMenu() {
+        document.querySelector(".nav-links").classList.toggle("active");
+      }
+      function toggleDetails(id) {
+        document.getElementById(id).classList.toggle("active");
+      }
+      // Get the current year
+      const currentYear = new Date().getFullYear();
+
+      // Set the year in the span element with id 'year'
+      document.getElementById("year").textContent = currentYear;
+    </script>
+  </body>
 </html>
