Validation page and some responsive menu added

--- a/home.html
+++ b/home.html
@@ -14,11 +14,11 @@
     <nav class="navbar">
         <b href="index.html" class="active">
             <img src="image/logoicon.png" alt="QE Logo" class="icon">
-            <h2>Quality Education</h2>
-        </b> 
+           <a class="active" href="index.html"><h2>Quality Education</h2></a> 
+        </b>  
       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
       <div class="nav-links">
-        <a href="index.html">Splash</a>
+        <!-- <a href="index.html">Splash</a> -->
         <a href="home.html" class="active">Home</a>
         <a href="volunteer.html">Volunteer</a>
         <a href="table.html">Table</a>
@@ -189,6 +189,7 @@
             <li><a href="pageEditor_ST3.html">Bijay Bikram Dahal</a></li>
             <li><a href="pageEditor_ST4.html">Kaushal Khatri</a></li>
           </ul>
+          <p class="head"> <a href="validation1.html">Validation Page</a></p>
         </div>
       </div>
       <p style="color: tan">
