--- a/content_ST1.html
+++ b/content_ST1.html
@@ -14,17 +14,16 @@
     <nav class="navbar">
         <b href="index.html" class="active">
             <img src="image/logoicon.png" alt="QE Logo" class="icon">
-            <h2>Quality Education</h2>
-        </b> 
+           <a class="active" href="index.html"><h2>Quality Content </h2></a> 
+        </b>  
                 <button class="menu-toggle" onclick="toggleMenu()">☰</button>
         <div class="nav-links">
-          <a href="index.html">Splash</a>
+          <!-- <a href="index.html">Splash</a> -->
           <a href="home.html">Home</a>
           <a href="content_ST1.html"class="active">Ankit Paudel</a>
           <a href="content_ST2.html">Aryan Shrestha</a>
           <a href="content_ST3.html">Bijay Bikram Dahal</a>
           <a href="content_ST4.html">Kaushal Khatri</a>
-          <a href="team.html" >Team</a>
         </div>
       </nav>
 
@@ -95,6 +94,7 @@
                     <li><a href="pageEditor_ST3.html">Bijay Bikram Dahal</a></li>
                     <li><a href="pageEditor_ST4.html">Kaushal Khatri</a></li>
                 </ul>
+                <p class="head"> <a href="validation1.html">Validation Page</a></p>
             </div>
         </div>
         <p style="color: tan">
